changed the color
changed the color to blue

--- a/testtt.html
+++ b/testtt.html
@@ -1,2 +1,2 @@
-<h1>my first websit</h1>
-<p>my fav colr is <span style="color:red;">red</span></p>
+<h1>My first websi</h1>
+<p>My fav colOr is <span style="color:blue;">red</span></p>
