--- a/testtt.html
+++ b/testtt.html
@@ -1,2 +1,2 @@
-<h1>My first websi</h1>
-<p>My fav colOr is <span style="color:blue;">red</span></p>
+<h1>My first website</h1>
+<p>My fav color is <span style="color:blue;">red</span></p>
