--- a/2.html
+++ b/2.html
@@ -1,4 +1,8 @@
-<h1>heading 1</h1>
+<html>
+<head>
+	<title>Elements!!!</title>
+</head>
+<h1 style="color:blue;  text-decoration: underline;">heading 1</h1>
 <h2>heading 2</h2>
 <p>this is my first paragraph</p>
 <div>
